[package]
name = "cosette"
version = "0.1.0"
authors = ["Shuxian Wang <wsx@berkeley.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ena = "0.14"
z3 = "0.10"
scopeguard = "1.1"
itertools = "0.10"
permutation = "0.2"
paste = "1.0"
indenter = "0.3"
log = "0.4"
env_logger = "0.9"
